Added auth routes for login and register and their openapi schemas
