# backend/src/app.js
@@ -7,6 +7,7 @@ const path = require('path');
 const OpenApiValidator = require('express-openapi-validator');
 
 const dummy = require('./dummy');
+const auth = require('./auth');
 
 const app = express();
 app.use(cors());
@@ -28,6 +29,8 @@ app.use(
 
 app.get('/v0/dummy', dummy.get);
 // Your routes go here
+app.post('/v0/login', auth.login);
+app.post('/v0/register', auth.register);
 
 app.use((err, req, res, next) => {
   res.status(err.status).json({
